<resources>
    <string name="app_name">comercioTP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="alimentos">alimentos</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="ingresa_con_tu_correo">Ingresa con tu correo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ver_correo">ver correo</string>
    <string name="contrase_a">contraseña</string>
    <string name="ver_password">ver password</string>
    <string name="recu_rdame">recuerdame</string>
    <string name="olvide_mi_contrasenia">olvide mi contraseña</string>
    <string name="registrate_aqui">registrate aquí</string>
    <string name="crear_una_cuenta">crear una cuenta</string>
    <string name="hello_blank_fragment">Home </string>
    <string name="cargando">Cargando</string>
    <string name="salir">salir</string>
    <string name="cerrar_sesion">cerrar sesión</string>
    <string name="cancelar">cancelar</string>
    <string name="aceptar">aceptar</string>
    <string name="deseas_cerrar_tu_sesi_n">desea cerrar sesión</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="close_session">cerrar sesión</string>
    <string name="_5">5%</string>
    <string name="_15">15%</string>
</resources>