<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <TextView
        android:id="@+id/tv_welcome_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/bienvenido"
        android:textColor="@color/colorBlackBusiness"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gl_v_init"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_adorno_login"
        android:layout_width="5dp"
        android:layout_height="70dp"
        android:background="@color/colorBlueBusiness"
        app:layout_constraintEnd_toStartOf="@+id/gl_v_init"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBackgroundBusiness"
        android:contentDescription="@string/alimentos"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_icon_login_back"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_15_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_95_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.cardview.widget.CardView
        android:id="@+id/v_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/gl_h_95_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_h_15_login"
        app:layout_constraintWidth_percent="0.90">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:backgroundTint="@color/colorWhite"
                android:indeterminate="true"
                android:indeterminateTint="#3095FF"
                android:max="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v_05_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v_95_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/tv_iniciar_sesion_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/iniciar_sesi_n"
                android:textColor="@color/colorBlackBusiness"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_inicia_subtittle_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/ingresa_con_tu_correo"
                android:textColor="@color/colorBlueCardsTransparent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toBottomOf="@+id/tv_iniciar_sesion_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_login_user"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/correo_electr_nico"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/color_gray_login"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/et_login_pass"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toBottomOf="@+id/tv_inicia_subtittle_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ver_correo"
                android:src="@drawable/ic_icon_help_email"
                app:layout_constraintBottom_toBottomOf="@+id/et_login_user"
                app:layout_constraintEnd_toEndOf="@+id/et_login_user"
                app:layout_constraintTop_toTopOf="@+id/et_login_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_login_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/contrase_a"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="@color/color_gray_login"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/et_login_user"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toBottomOf="@+id/et_login_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/ver_password"
                android:src="@drawable/ic_icon_eye_off"
                app:layout_constraintBottom_toBottomOf="@+id/et_login_pass"
                app:layout_constraintEnd_toEndOf="@+id/et_login_pass"
                app:layout_constraintTop_toTopOf="@+id/et_login_pass" />


            <CheckBox
                android:id="@+id/cb_rememmber_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorGrayLogin"
                android:text="@string/recu_rdame"
                android:textColor="@color/colorGrayLogin"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toBottomOf="@+id/et_login_pass" />


            <TextView
                android:id="@+id/tv_login_recuperar_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/olvide_mi_contrasenia"
                android:textColor="@color/colorGrayLogin"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toBottomOf="@+id/cb_rememmber_login" />

            <Button
                android:id="@+id/btn_login_start_session"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/a_background_button_blue_gradient"
                android:enabled="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/iniciar_sesi_n"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/btn_login_create_account"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_recuperar_pass"
                app:layout_constraintVertical_bias="0.494" />

            <TextView
                android:id="@+id/btn_login_create_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/crear_una_cuenta"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/tv_registrate_aqui"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login" />

            <TextView
                android:id="@+id/tv_registrate_aqui"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/registrate_aqui"
                android:textColor="@color/colorBlueBusiness"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/gl_v_95_login"
                app:layout_constraintStart_toStartOf="@+id/gl_v_05_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>